--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,8 @@
 <head>
 	<meta name="charset" content="utf-8">
 	<title>Course Registration</title>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css">
+	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
 <div id="app"></div>
