--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,11 @@
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
-<div id="app"></div>
+<div id="app">
+	<div class="text-center" style="margin-top: 50px; font-size: 12pt; color: #ccc;">
+		Initializing application...
+	</div>
+</div>
 <script src="js/bundle.js"></script>
 </body>
 </html>
